<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>apisecurity</artifactId>
  <build>
    <finalName>spring-api-engine</finalName>
    <plugins>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
            </exclude>
          </excludes>
        </configuration>
        <groupId>org.springframework.boot</groupId>
      </plugin>
      <plugin>
        <artifactId>sonar-maven-plugin</artifactId>
        <groupId>org.sonarsource.scanner.maven</groupId>
        <version>3.9.0.2155</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-security</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>logstash-logback-encoder</artifactId>
      <groupId>net.logstash.logback</groupId>
      <version>6.6</version>
    </dependency>
    <dependency>
      <artifactId>logback-core</artifactId>
      <groupId>ch.qos.logback</groupId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <artifactId>logback-classic</artifactId>
      <groupId>ch.qos.logback</groupId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <artifactId>logback-access</artifactId>
      <groupId>ch.qos.logback</groupId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <artifactId>java-jwt</artifactId>
      <groupId>com.auth0</groupId>
      <version>3.18.1</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>mysql-connector-java</artifactId>
      <groupId>mysql</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-security-test</artifactId>
      <groupId>org.springframework.security</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>elasticsearch-x-content</artifactId>
      <groupId>org.elasticsearch</groupId>
      <version>7.13.0</version>
    </dependency>
    <dependency>
      <artifactId>elasticsearch</artifactId>
      <groupId>org.elasticsearch</groupId>
      <version>7.13.0</version>
    </dependency>
    <dependency>
      <artifactId>elasticsearch-rest-high-level-client</artifactId>
      <groupId>org.elasticsearch.client</groupId>
      <version>7.13.0</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
      <version>2.5.3</version>
    </dependency>
    <dependency>
      <artifactId>javafaker</artifactId>
      <groupId>com.github.javafaker</groupId>
      <version>1.0.2</version>
    </dependency>
    <dependency>
      <artifactId>mysql-connector-java</artifactId>
      <groupId>mysql</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>firebase-admin</artifactId>
      <groupId>com.google.firebase</groupId>
      <version>7.0.0</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter-api</artifactId>
      <groupId>org.junit.jupiter</groupId>
    </dependency>
    <dependency>
      <artifactId>assertj-core</artifactId>
      <groupId>org.assertj</groupId>
    </dependency>
    <dependency>
      <artifactId>jackson-databind</artifactId>
      <groupId>com.fasterxml.jackson.core</groupId>
    </dependency>
    <dependency>
      <artifactId>lettuce-core</artifactId>
      <groupId>io.lettuce</groupId>
    </dependency>
  </dependencies>
  <description>Project for Api Security</description>
  <groupId>com.spring.apisecurity.security</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>apisecurity</name>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>2.5.4</version> <!-- lookup parent from repository -->
  </parent>
  <properties>
    <java.version>17</java.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>
  <version>0.0.1-SNAPSHOT</version>
</project>
